--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -43,7 +43,7 @@
     </header>
 
     <!-- responsive nav for mobile view -->
-    <nav class="lg:hidden hidden" id="mobile-menu" style="background-color: #78350F;">
+    <nav class="lg:hidden" id="mobile-menu" style="background-color: #78350F;">
         <!-- Change to your desired amber color -->
         <div class="flex flex-col items-center">
             <a href="/bookshelf" class="text-white my-2">My Bookshelf</a>
@@ -63,7 +63,7 @@
 
     <!-- footer area -->
     <footer class="bg-amber-900 p-4 text-white text-center">
-        <p>&copy; {{currentYear}} Bookshelf App by Jonathan Acciarito, Michael Levey, Jessica Scheck, Colin Rent, and
+        <p>&copy; January 2024. Bookshelf App by Jonathan Acciarito, Michael Levey, Jessica Scheck, Colin Rent, and
             Blaze Harmon. All rights reserved.</p>
     </footer>
 
