--- a/views/bookshelf.handlebars
+++ b/views/bookshelf.handlebars
@@ -19,7 +19,7 @@
 
 <div>
   {{#each shelves}}
-  <div class="my-shelves border p-4 mb-4">
+  <div class="my-shelves border p-4 mb-4 ">
     <h3 class="text-2xl mb-2">{{this.name}}</h3>
     <button class="delete-shelf-button bg-red-500 text-white py-2 px-4 rounded hover:bg-red-700 hover:text-gray-100"
       data-shelf-id="{{this.id}}">Delete Shelf</button>
@@ -28,7 +28,7 @@
       data-shelf-id="{{this.id}}">Edit Shelf</button>
 
     <!-- Updated structure for the Books loop -->
-    <div class="grid grid-cols-3 gap-4">
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
       {{#each this.Books}}
       <div class="saved-books border p-4 mb-4 flex flex-col items-center">
         <img src="https:covers.openlibrary.org/b/olid/{{this.cover_edition_key}}-M.jpg" class="mb-2" />
@@ -48,7 +48,7 @@
 </div>
 
 <h2 class="text-2xl mb-2">Your Saved Books</h2>
-<div class="grid grid-cols-3 gap-6">
+<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
   {{#each books}}
   <div class="saved-books border p-4 mb-4 flex flex-col items-center">
     <img src="https:covers.openlibrary.org/b/olid/{{this.cover_edition_key}}-M.jpg" class="mb-1" />
