fixed margin in mobile dropdown so you can see My Bookshelf option

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -44,8 +44,7 @@
 
     <!-- responsive nav for mobile view -->
     <nav class="lg:hidden" id="mobile-menu" style="background-color: #78350F;">
-        <!-- Change to your desired amber color -->
-        <div class="flex flex-col items-center">
+        <div class="flex flex-col items-center mt-8">
             <a href="/bookshelf" class="text-white my-2">My Bookshelf</a>
             <a href="/findbooks" class="text-white my-2">Search Library</a>
             {{#if logged_in}}
