--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -38,7 +38,7 @@
 
         <!-- view for logged in users -->
         {{#if logged_in}}
-        <h3 class="text-white">Welcome!</h3>
+        <h3 class="text-white mr-12">Welcome!</h3>
         {{/if}}
     </header>
 
