--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -43,7 +43,7 @@
     </header>
 
     <!-- responsive nav for mobile view -->
-    <nav class="lg:hidden" id="mobile-menu" style="background-color: #78350F;">
+    <nav class="lg:hidden hidden" id="mobile-menu" style="background-color: #78350F;">
         <div class="flex flex-col items-center mt-8">
             <a href="/bookshelf" class="text-white my-2">My Bookshelf</a>
             <a href="/findbooks" class="text-white my-2">Search Library</a>
