fixed buttons on search page, other updates

--- a/views/bookshelf.handlebars
+++ b/views/bookshelf.handlebars
@@ -38,7 +38,7 @@
         <p><strong>Avg. Rating: </strong>{{this.ratings_average}} out of 5</p>
         <p><strong>Author: </strong> {{this.author_name}}</p>
         <button
-          class="remove-from-shelf-button bg-red-500 text-white py-2 px-4 rounded hover:bg-red-700 hover:text-gray-100"
+          class="remove-from-shelf-button bg-gray-500 text-white py-2 px-4 rounded mt-2 hover:bg-red-700 hover:text-gray-100"
           data-book-id="{{id}}">Remove from Shelf</button>
       </div>
       {{/each}}
