--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/tw.css" />
 
     <title>
-        <stronger>Bookshelf</stronger>
+        Bookshelf 📚
     </title>
 </head>
 
