--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -21,15 +21,15 @@
 </form>
 
 <!-- Button to delete the account -->
-<div class="alignCenter">
+{{!-- <div class="alignCenter">
   <div class="w-50 text-center my-2 py-2 bg-green-400 hover:bg-green-500 text-white rounded">
     <button type="submit">Change Password</button>
   </div>
-</form>
+</form> --}}
 
 <!-- Button to delete the account -->
 <div
-  class="w-50 text-center py-2 my-4 bg-red-500 text-white rounded hover:bg-red-600 hover:text-gray-100"
+  class="w-50 text-center py-2 my-4 bg-red-700 text-white rounded hover:bg-red-800 hover:text-gray-100"
 >
   <button id="deleteAccountButton" data-user-id="{{user.id}}">Delete Account</button>
 </div>
